--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Perecption Rachel Kim</title>
+  <title>Perception Rachel Kim</title>
   <meta charset="utf-8">
   <link href='assets/css/main.css' media='all' rel='stylesheet' type='text/css' />
   <link href='assets/css/reset.css' media='all' rel='stylesheet' type='text/css'/>
@@ -26,11 +26,12 @@
          <p>thesis 2021 Parsons School of Fashion</p>
        </div>
 
-      <button><a href="about.html">enter</a></button>
+      <button><a href="gallery.html">enter</a></button>
 
 		<script>
 			$( document ).ready(function() {
 
+      
         $(function() {
             $('.light').addClass('on');
             $('.light').on('click', function() {
