--- a/scene.html
+++ b/scene.html
@@ -71,7 +71,7 @@
 
       const material = new THREE.MeshPhongMaterial( { color: 0xAAAAAA, specular: 0x111111, shininess: 200 } );
 
-        loader.load( 'http://www.evelinfung.com/assets/img/object.stl', function ( geometry ) {
+        loader.load( 'object.stl', function ( geometry ) {
 
           const mesh = new THREE.Mesh( geometry, material );
 
