--- a/scene.html
+++ b/scene.html
@@ -69,7 +69,7 @@
       //     scene.add( mesh );
       // } );
 
-      const material = new THREE.MeshPhongMaterial( { color: 0xAAAAAA, specular: 0x111111, shininess: 200 } );
+      const material = new THREE.MeshPhongMaterial( { color: 0x000000, specular: 0x111111, shininess: 200 } );
 
         loader.load( 'object.stl', function ( geometry ) {
 
