--- a/products/terrarium.html
+++ b/products/terrarium.html
@@ -3,53 +3,39 @@
 <head>
   <title>Perecption Rachel Kim</title>
   <meta charset="utf-8">
-  <link href='assets/css/main.css' media='all' rel='stylesheet' type='text/css' />
-  <link href='assets/css/reset.css' media='all' rel='stylesheet' type='text/css'/>
+  <link href='../assets/css/main.css' media='all' rel='stylesheet' type='text/css' />
+  <link href='../assets/css/reset.css' media='all' rel='stylesheet' type='text/css'/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
   <link rel="icon" href="img/icon.png" type="image/x-icon" />
-  <style> body{overflow-x: hidden;}</style>
+  <style> body{overflow-x: hidden; overflow-y: hidden}</style>
+ 
 </head>
-	<body>
-      <div id="header">
-        <h1>perception</h1>
+  <body>
+      <div id="home">
+        <a href="../index.html">perception</a>
       </div>
-  		<div id="about">
-         <p>Every home has a unique story—its decoration and design reflect the personalities of the owners. The exteriors of neighboring houses may resemble each other, sometimes appearing rather mundane, but the interior can be unique and ornately stylized.</p>
+      <div id="owner">
+        <p>Rachel Kim Thesis 2021</p>
+      </div>
+      <div id="project-header">
+        <h1>weight bag</h1>
+      </div>
+      <div id="image">
+        <img src=""></div>
+      </div>
+      <div id="detail-tombstone">
+         <p>material</p>
+         <p>dimension</p>
        </div>
 
-       <div id="gallery">
-         <div class="product">
-           <img class="placeholder" src="">
-           <h2>name of product</h2>
-           <p>desc desc</p>
-         </div>
 
-         <div class="product">
-           <img class="placeholder" src="">
-           <h2>name of product</h2>
-           <p>desc desc</p>
-         </div>
+    <script>
+      $( document ).ready(function() {
 
-         <div class="product">
-           <img class="placeholder" src="">
-           <h2>name of product</h2>
-           <p>desc desc</p>
-         </div>
-
-       </div>
-
-		<script>
-			$( document ).ready(function() {
-
-        $(function() {
-            $('.light').addClass('on');
-            $('.light').on('click', function() {
-              $(this).toggleClass('on');
-            });
-          });
         
-    		});
-	
-		</script>	
-	</body>
+        
+        });
+  
+    </script> 
+  </body>
 </html>
