--- a/scene.html
+++ b/scene.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/three@0.110/examples/js/controls/OrbitControls.js"></script>
-      <script src="assets/js/STLLoader.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.110/examples/js/controls/OrbitControls.js"></script>
+    <script src="assets/js/STLLoader.js"></script>
       <style>
           body {
               margin: 0;
@@ -27,87 +27,59 @@
     <script>
 
 
-      // Necessary for camera/plane rotation
-      var degree = Math.PI/180;
 
-      // Setup
-      var scene = new THREE.Scene();
-      var camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-      var renderer = new THREE.WebGLRenderer();
+      const scene = new THREE.Scene();
+      const camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
 
-      renderer.setSize(window.innerWidth, window.innerHeight);
-      document.body.appendChild(renderer.domElement);
+      const renderer = new THREE.WebGLRenderer();
+      renderer.setSize( window.innerWidth, window.innerHeight );
+      document.body.appendChild( renderer.domElement );
 
-      // Resize after viewport-size-change
-      window.addEventListener("resize", function () {
-          var height = window.innerHeight;
-          var width = window.innerWidth;
-          renderer.setSize(width, height);
-          camera.aspect = width / height;
-          camera.updateProjectionMatrix();
-      });
-
-      // Adding controls
       controls = new THREE.OrbitControls(camera, renderer.domElement);
 
-      // Ground (comment out line: "scene.add( plane );" if Ground is not needed...)
-      var plane = new THREE.Mesh(
-          new THREE.PlaneBufferGeometry(500, 500 ),
-          new THREE.MeshPhongMaterial( { color: 0x999999, specular: 0x101010 } )
-      );
-      plane.rotation.x = -90 * degree;
-      plane.position.y = 0;
-      scene.add( plane );
-      plane.receiveShadow = true;
+      // const geometry = new THREE.BoxGeometry();
+      // const material1 = new THREE.MeshBasicMaterial( { color: 0x99FF33 } );
+      // const cube = new THREE.Mesh( geometry, material1 );
+      //scene.add( cube );
 
       var loader = new THREE.STLLoader();
-      // Binary files - STL Import
-      // loader.load( 'assets/img/object.stl', function ( geometry ) {
-      //     var material = new THREE.MeshLambertMaterial( { color: 0xFFFFFF, specular: 0x111111, shininess: 200 } );
-      //     var mesh = new THREE.Mesh( geometry, material );
-      //     mesh.position.set( 0, 20, 0);
-      //     scene.add( mesh );
-      // } );
 
-      const material = new THREE.MeshPhongMaterial( { color: 0x000000, specular: 0x111111, shininess: 200 } );
+      const material = new THREE.MeshPhongMaterial( { color: 0x666666, specular: 0x111111, shininess: 200 } );
 
-        loader.load( 'object.stl', function ( geometry ) {
+        loader.load( './assets/3d/clock.stl', function ( geometry ) {
 
           const mesh = new THREE.Mesh( geometry, material );
 
-          mesh.position.set( 0, - 0.37, - 0.6 );
-          mesh.rotation.set( - Math.PI / 2, 0, 0 );
-          mesh.scale.set( 2, 2, 2 );
+          mesh.rotation.x = -55;
+          mesh.rotation.y = 185;
+
+          //mesh.rotation.set( - Math.PI / 2, 0, 0 );
+          mesh.scale.set( .03, .03, .03 );
 
           mesh.castShadow = true;
           mesh.receiveShadow = true;
 
           scene.add( mesh );
 
+          console.log(mesh)
+
+          const animate = function () {
+        requestAnimationFrame( animate );
+
+        mesh.rotation.x += 0.01;
+        mesh.rotation.y += 0.01;
+
+        renderer.render( scene, camera );
+      };
+
+      animate();
+
         } );
 
-      // Camera positioning
-      camera.position.z = 100;
-      camera.position.y = 100;
-      camera.rotation.x = -45 * degree;
+      camera.position.z = 5;
 
-      // Ambient light (necessary for Phong/Lambert-materials, not for Basic)
-      var ambientLight = new THREE.AmbientLight(0xffffff, 1);
-      scene.add(ambientLight);
+      renderer.setClearColor( 0xffffff );
 
-      // Draw scene
-      var render = function () {
-          renderer.render(scene, camera);
-      };
-
-      // Run game loop (render,repeat)
-      var GameLoop = function () {
-          requestAnimationFrame(GameLoop);
-
-          render();
-      };
-
-      GameLoop();
     </script>
 
 
