--- a/products/teapot.html
+++ b/products/teapot.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Perecption Rachel Kim</title>
+  <title>Perception Rachel Kim</title>
   <meta charset="utf-8">
   <link href='../assets/css/main.css' media='all' rel='stylesheet' type='text/css' />
   <link href='../assets/css/reset.css' media='all' rel='stylesheet' type='text/css'/>
