--- a/products/terrarium.html
+++ b/products/terrarium.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Perecption Rachel Kim</title>
+  <title>Perception Rachel Kim</title>
   <meta charset="utf-8">
   <link href='../assets/css/main.css' media='all' rel='stylesheet' type='text/css' />
   <link href='../assets/css/reset.css' media='all' rel='stylesheet' type='text/css'/>
@@ -51,15 +51,19 @@
 
       const material = new THREE.MeshPhongMaterial( { color: 0x666666, specular: 0x111111, shininess: 200 } );
 
-        loader.load( '../assets/3d/clock.stl', function ( geometry ) {
+        loader.load( '../assets/3d/terrarium.stl', function ( geometry ) {
 
           const mesh = new THREE.Mesh( geometry, material );
 
-          mesh.rotation.x = -55;
-          mesh.rotation.y = 185;
-          mesh.rotation.set( 2, 1, 0 );
+          mesh.rotation.x = 1;
+          mesh.rotation.y = 1;
+          mesh.rotation.set( 0.1, 0.1, 0.1 );
 
-          mesh.scale.set( .03, .03, .03 );
+          mesh.scale.set( .05, .05, .05 );
+
+
+          //mesh.position.x = -20;
+          //mesh.position.y = 45;
 
           mesh.castShadow = true;
           mesh.receiveShadow = true;
@@ -76,11 +80,17 @@
 
         renderer.render( scene, camera );
 
+
+        // console.log(mesh.position.x, mesh.position.y)
+
       };
 
       animate();
 
+
         } );
+
+
 
       camera.position.z = 5;
 
