--- a/products/weight.html
+++ b/products/weight.html
@@ -22,7 +22,7 @@
         <p>Rachel Kim Thesis 2021</p>
       </div> -->
       <div id="project-header">
-        <h1>weight bag</h1>
+        <h1>weight</h1>
       </div>
       <div id="how-to">
         <p>grab the bag, zoom into it, play with it</p>
@@ -30,13 +30,11 @@
       <div id="image">
       </div>
       <div id="detail-tombstone">
-         <p>material</p>
-         <p>dimension</p>
+        <h1 style="background-color: blue; width: 80px" id="control1"></h1>
       </div>
       <div id="nav">
-          <p><a href="./plant-holder.html">coming next : plant holder</a></p>
+          <p><a href="./plant-holder.html">coming next : planterette</a></p>
        </div>
-
     <script>
       const scene = new THREE.Scene();
       const camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
@@ -55,8 +53,6 @@
 
           const mesh = new THREE.Mesh( geometry, material );
 
-
-
           mesh.rotation.set( -90, 0, 10 );
 
           mesh.scale.set( .05, .05, .05 );
@@ -68,24 +64,32 @@
 
           console.log(mesh)
 
-          const animate = function () {
+          var itemMoving = true,
+          buttonText = document.getElementById("control1");
+
+      $("#control1").click(function() {
+        itemMoving = !itemMoving;
+      })
+
+      const animate = function() {
           requestAnimationFrame( animate );
-
-        mesh.rotation.x += 0.02;
-        mesh.rotation.y += 0.005;
-
-        renderer.render( scene, camera );
-
-      };
-
-       animate();
-
-        } );
-
-      camera.position.z = 5;
-
-      renderer.setClearColor( 0xffffff );
-
+          render();
+        }
+          
+      function render() {
+        if (itemMoving){
+          mesh.rotation.x += 0.008;
+          mesh.rotation.y += 0.008;
+          buttonText.textContent = "pause";
+        }else{
+          buttonText.textContent = "play";
+        }
+        renderer.setClearColor( 0xffffff);
+        renderer.render(scene, camera);
+      }
+      animate();
+      } );
+        camera.position.z = 5;
   
     </script> 
   </body>
