--- a/scene.html
+++ b/scene.html
@@ -46,15 +46,16 @@
 
       const material = new THREE.MeshPhongMaterial( { color: 0x666666, specular: 0x111111, shininess: 200 } );
 
-        loader.load( './assets/3d/clock.stl', function ( geometry ) {
+        loader.load( './assets/3d/teapot.stl', function ( geometry ) {
 
           const mesh = new THREE.Mesh( geometry, material );
 
-          mesh.rotation.x = -55;
-          mesh.rotation.y = 185;
+          mesh.rotation.x = -16;
+          mesh.rotation.y = -15;
+          mesh.rotation.z = -133;
 
           //mesh.rotation.set( - Math.PI / 2, 0, 0 );
-          mesh.scale.set( .03, .03, .03 );
+          mesh.scale.set( .015, .015, .015 );
 
           mesh.castShadow = true;
           mesh.receiveShadow = true;
