--- a/products/teapot.html
+++ b/products/teapot.html
@@ -19,7 +19,7 @@
         <a href="../index.html">perception</a>
       </div>
       <div id="project-header">
-        <h1>teapot bag</h1>
+        <h1>tea<br>time</h1>
       </div>
       <div id="how-to">
         <p>grab the bag, zoom into it, play with it</p>
@@ -27,11 +27,10 @@
       <div id="image">
       </div>
       <div id="detail-tombstone">
-         <p>material</p>
-         <p>dimension</p>
+         <h1 style="background-color: blue; width: 80px" id="control1"></h1>
       </div>
       <div id="nav">
-          <p><a href="./terrarium.html">coming next : terrarium</a></p>
+          <p><a href="./terrarium.html">coming next : scent garden</a></p>
        </div>
 
     <script>
@@ -48,15 +47,13 @@
 
       const material = new THREE.MeshPhongMaterial( { color: 0x666666, specular: 0x111111, shininess: 200 } );
 
-        loader.load( './teapot.stl', function ( geometry ) {
+        loader.load( '../assets/3d/teapot.stl', function ( geometry ) {
 
           const mesh = new THREE.Mesh( geometry, material );
 
-          mesh.rotation.x = -55;
-          mesh.rotation.y = 185;
-          mesh.rotation.set( 2, 1, 0 );
+          mesh.rotation.set( -16, -15, -133);
 
-          mesh.scale.set( .03, .03, .03 );
+          mesh.scale.set( .015, .015, .015 );
 
           mesh.castShadow = true;
           mesh.receiveShadow = true;
@@ -65,23 +62,32 @@
 
           console.log(mesh)
 
-          const animate = function () {
-          requestAnimationFrame( animate );
+          var itemMoving = true,
+          buttonText = document.getElementById("control1");
 
-        mesh.rotation.x += 0.01;
-        mesh.rotation.y += 0.01;
+          $("#control1").click(function() {
+            itemMoving = !itemMoving;
+          })
 
-        renderer.render( scene, camera );
-
-      };
-
-      animate();
-
-        } );
-
-      camera.position.z = 5;
-
-      renderer.setClearColor( 0xffffff );
+          const animate = function() {
+              requestAnimationFrame( animate );
+              render();
+            }
+              
+          function render() {
+            if (itemMoving){
+              mesh.rotation.x += 0.008;
+              mesh.rotation.y += 0.008;
+              buttonText.textContent = "pause";
+            }else{
+              buttonText.textContent = "play";
+            }
+            renderer.setClearColor( 0xffffff);
+            renderer.render(scene, camera);
+          }
+          animate();
+          } );
+            camera.position.z = 5;
 
   
     </script> 
