Change the button
_Button for object control

--- a/products/weight.html
+++ b/products/weight.html
@@ -6,9 +6,8 @@
   <link href='../assets/css/main.css' media='all' rel='stylesheet' type='text/css' />
   <link href='../assets/css/reset.css' media='all' rel='stylesheet' type='text/css'/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
-  <link rel="icon" href="img/icon.png" type="image/x-icon" />
+  <link rel="icon" href="../assets/img/favicon.png" type="image/x-icon" />
   <style> body{overflow-x: hidden; overflow-y: hidden}</style>
-  
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.110/examples/js/controls/OrbitControls.js"></script>
   <script src="../assets/js/STLLoader.js"></script>
@@ -30,7 +29,7 @@
       <div id="image">
       </div>
       <div id="detail-tombstone">
-        <h1 style="background-color: blue; width: 80px" id="control1"></h1>
+        <h1 id="control1"></h1>
       </div>
       <div id="nav">
           <p><a href="./plant-holder.html">coming next : planterette</a></p>
