--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
   <link href='assets/css/main.css' media='all' rel='stylesheet' type='text/css' />
   <link href='assets/css/reset.css' media='all' rel='stylesheet' type='text/css'/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
-  <link rel="icon" href="img/icon.png" type="image/x-icon" />
+  <link rel="icon" href="assets/img/favicon.png" type="image/x-icon" />
   <style> body{overflow-x: hidden;}</style>
 </head>
 	<body>
